# AutoAlarm

./: .gitignore  README.md  config.json.example  pyproject.toml  test_alarm.py
examples/: basic_usage.py
src/auto_alarm/: __init__.py  config.py  decorator.py  notifier.py
