[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-alarm"
version = "0.1.0"
description = "A Python package that automatically sends email notifications when functions fail"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Zhuohang", email = "zhuohang@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["error", "notification", "email", "monitoring", "alarm"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/yourusername/auto-alarm"
Repository = "https://github.com/yourusername/auto-alarm"
Issues = "https://github.com/yourusername/auto-alarm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auto_alarm = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
